[gd_scene load_steps=40 format=4 uid="uid://dyg44obofc0f4"]

[ext_resource type="Script" uid="uid://c1gnpo3cfd688" path="res://scripts/main_scene.gd" id="1_w2twt"]
[ext_resource type="Texture2D" uid="uid://sk6rnkgigrj1" path="res://assets/sprites/bg_tiles_floor.png" id="2_6u1mn"]
[ext_resource type="PackedScene" uid="uid://desqo32gyby16" path="res://prefabs/player.tscn" id="2_pw63i"]
[ext_resource type="Script" uid="uid://bfo6yop4av2ef" path="res://scripts/chunk_map.gd" id="3_4bgka"]
[ext_resource type="PackedScene" uid="uid://wlwt2d04wt54" path="res://prefabs/enemies/enemy_spawner.tscn" id="3_18nlu"]
[ext_resource type="PackedScene" uid="uid://dmhyrxsnqhd02" path="res://prefabs/enemies/coal_cobold.tscn" id="3_c16ls"]
[ext_resource type="PackedScene" uid="uid://csuwhfosrvmjc" path="res://prefabs/enemies/match.tscn" id="5_18nlu"]
[ext_resource type="PackedScene" uid="uid://qlffo16i1dht" path="res://prefabs/enemies/snowman.tscn" id="5_rt2n2"]
[ext_resource type="FontFile" uid="uid://cbxioj0mtjvhn" path="res://assets/fonts/Kingthings Christmas 2.2.ttf" id="7_c16ls"]
[ext_resource type="PackedScene" uid="uid://dltcg0k47xnnl" path="res://prefabs/powerups/PUCandyCane.tscn" id="7_mngbo"]
[ext_resource type="PackedScene" uid="uid://bpfjk6sj24lri" path="res://prefabs/powerups/PUNutCracker.tscn" id="8_4w45t"]
[ext_resource type="PackedScene" uid="uid://cqrtal6tnitnr" path="res://ui/powerup_selection.tscn" id="8_18nlu"]
[ext_resource type="PackedScene" uid="uid://lber3wov7auy" path="res://prefabs/enemies/dig_tree.tscn" id="8_bcnxi"]
[ext_resource type="PackedScene" uid="uid://c8ok7da1wvrfg" path="res://prefabs/enemies/snowflake.tscn" id="9_k6f3i"]
[ext_resource type="PackedScene" uid="uid://cq7rjoc8ufoo" path="res://prefabs/powerups/PUStar.tscn" id="9_r6p65"]
[ext_resource type="PackedScene" uid="uid://cji4pf8qr4ufm" path="res://prefabs/powerups/PUTinSoldier.tscn" id="10_si52b"]
[ext_resource type="PackedScene" uid="uid://bkk4ucvu62i4k" path="res://prefabs/powerups/PUCookie.tscn" id="12_01n6w"]
[ext_resource type="PackedScene" uid="uid://bevvd5kv6smxy" path="res://prefabs/present.tscn" id="13_4w45t"]
[ext_resource type="PackedScene" uid="uid://b6ohmegi1p36n" path="res://prefabs/powerups/PUhorse.tscn" id="14_7nt27"]
[ext_resource type="Texture2D" uid="uid://cvech4e18o74p" path="res://assets/sprites/arrow.png" id="14_si52b"]
[ext_resource type="Script" uid="uid://bh1nwbquxu2xb" path="res://scripts/present_arrow.gd" id="15_01n6w"]
[ext_resource type="PackedScene" uid="uid://dvmnutgvsrlb3" path="res://prefabs/audio_loop_player.tscn" id="17_u0fll"]
[ext_resource type="AudioStream" uid="uid://ccoce6m6hroc7" path="res://assets/music/christmas-453699.mp3" id="18_6p3nn"]
[ext_resource type="AudioStream" uid="uid://geno0qm8q5t3" path="res://assets/music/christmas-new-year-456464.mp3" id="19_k67gn"]
[ext_resource type="AudioStream" uid="uid://b61vn7fshycni" path="res://assets/music/christmas-show-438871.mp3" id="20_k3g67"]
[ext_resource type="FontFile" uid="uid://d323h10y7hdwm" path="res://assets/fonts/ARCADE_N.TTF" id="21_xdqt8"]
[ext_resource type="Shader" uid="uid://vnsefegkpprn" path="res://assets/shader/snowfall.gdshader" id="26_6p3nn"]
[ext_resource type="PackedScene" uid="uid://bj3yq7xm5c7es" path="res://ui/powerup_tray.tscn" id="27_k67gn"]
[ext_resource type="PackedScene" uid="uid://dyr7pgfoyyod8" path="res://ui/game_over_screen.tscn" id="28_k3g67"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bcnxi"]
texture = ExtResource("2_6u1mn")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/0/terrains_peering_bit/left_side = 0
0:0/0/terrains_peering_bit/top_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/left_side = 0
1:0/0/terrains_peering_bit/top_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
2:0/0/terrains_peering_bit/top_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/probability = 0.01
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
5:0/0/terrains_peering_bit/top_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
6:0/0/terrains_peering_bit/top_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/probability = 0.01
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/left_side = 0
3:0/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_7nt27"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Floor"
terrain_set_0/terrain_0/color = Color(0.74, 0.74, 0.74, 1)
sources/0 = SubResource("TileSetAtlasSource_bcnxi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k67gn"]
shader = ExtResource("26_6p3nn")
shader_parameter/spread = 0.5
shader_parameter/size = 0.85400003986648
shader_parameter/snow_color = Color(0.5370113, 0.5370113, 0.5370113, 1)
shader_parameter/snow_transparency = 0.02200002479499996
shader_parameter/speed = 0.5
shader_parameter/wind = 0.0
shader_parameter/num_of_layers = 20

[sub_resource type="LabelSettings" id="LabelSettings_18nlu"]
font = ExtResource("7_c16ls")
font_size = 129
font_color = Color(0.6, 0, 0.08235294, 1)

[sub_resource type="Animation" id="Animation_6wevv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_c1pb6"]
resource_name = "fade_in_out"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1cbu"]
_data = {
&"RESET": SubResource("Animation_6wevv"),
&"fade_in_out": SubResource("Animation_c1pb6")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_adb74"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_58gk3"]

[sub_resource type="LabelSettings" id="LabelSettings_to7gp"]
font = ExtResource("21_xdqt8")
font_color = Color(0.24313726, 0.69803923, 0.32941177, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_w2twt")

[node name="TileMapLayer" type="TileMapLayer" parent="." node_paths=PackedStringArray("player")]
z_index = -2
tile_map_data = PackedByteArray("AAAeABIAAAACAAAAAAAeABEAAAABAAAAAAAeABAAAAAFAAAAAAAeAA8AAAAFAAAAAAAeAA4AAAACAAAAAAAeAA0AAAAFAAAAAAAeAAwAAAABAAAAAAAeAAsAAAAAAAAAAAAeAAoAAAACAAAAAAAeAAkAAAAGAAAAAAAeAAgAAAAFAAAAAAAeAAcAAAAGAAAAAAAeAAYAAAAAAAAAAAAeAAUAAAAFAAAAAAAeAAQAAAAFAAAAAAAeAAMAAAAFAAAAAAAeAAIAAAAAAAAAAAAeAAEAAAAFAAAAAAAeAAAAAAAGAAAAAAAdABIAAAAGAAAAAAAdABEAAAAGAAAAAAAdABAAAAABAAAAAAAdAA8AAAAAAAAAAAAdAA4AAAABAAAAAAAdAA0AAAAAAAAAAAAdAAwAAAAAAAAAAAAdAAsAAAAGAAAAAAAdAAoAAAABAAAAAAAdAAkAAAAGAAAAAAAdAAgAAAAGAAAAAAAdAAcAAAAFAAAAAAAdAAYAAAABAAAAAAAdAAUAAAAGAAAAAAAdAAQAAAACAAAAAAAdAAMAAAAAAAAAAAAdAAIAAAAGAAAAAAAdAAEAAAAGAAAAAAAdAAAAAAABAAAAAAAcABIAAAABAAAAAAAcABEAAAABAAAAAAAcABAAAAABAAAAAAAcAA8AAAAGAAAAAAAcAA4AAAAFAAAAAAAcAA0AAAAFAAAAAAAcAAwAAAAFAAAAAAAcAAsAAAAAAAAAAAAcAAoAAAAFAAAAAAAcAAkAAAAFAAAAAAAcAAgAAAAGAAAAAAAcAAcAAAAFAAAAAAAcAAYAAAAFAAAAAAAcAAUAAAACAAAAAAAcAAQAAAAAAAAAAAAcAAMAAAABAAAAAAAcAAIAAAAFAAAAAAAcAAEAAAACAAAAAAAcAAAAAAAAAAAAAAAbABIAAAAAAAAAAAAbABEAAAAFAAAAAAAbABAAAAAAAAAAAAAbAA8AAAAAAAAAAAAbAA4AAAACAAAAAAAbAA0AAAACAAAAAAAbAAwAAAACAAAAAAAbAAsAAAABAAAAAAAbAAoAAAAGAAAAAAAbAAkAAAAAAAAAAAAbAAgAAAAFAAAAAAAbAAcAAAAAAAAAAAAbAAYAAAACAAAAAAAbAAUAAAAFAAAAAAAbAAQAAAAGAAAAAAAbAAMAAAABAAAAAAAbAAIAAAAGAAAAAAAbAAEAAAACAAAAAAAbAAAAAAACAAAAAAAaABIAAAACAAAAAAAaABEAAAAAAAAAAAAaABAAAAAGAAAAAAAaAA8AAAABAAAAAAAaAA4AAAAGAAAAAAAaAA0AAAACAAAAAAAaAAwAAAAEAAAAAAAaAAsAAAABAAAAAAAaAAoAAAAGAAAAAAAaAAkAAAABAAAAAAAaAAgAAAABAAAAAAAaAAcAAAABAAAAAAAaAAYAAAAAAAAAAAAaAAUAAAAGAAAAAAAaAAQAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAIAAAABAAAAAAAaAAEAAAAFAAAAAAAaAAAAAAAAAAAAAAAZABIAAAACAAAAAAAZABEAAAABAAAAAAAZABAAAAABAAAAAAAZAA8AAAABAAAAAAAZAA4AAAABAAAAAAAZAA0AAAAGAAAAAAAZAAwAAAAAAAAAAAAZAAsAAAABAAAAAAAZAAoAAAAFAAAAAAAZAAkAAAAFAAAAAAAZAAgAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAYAAAAFAAAAAAAZAAUAAAAFAAAAAAAZAAQAAAABAAAAAAAZAAMAAAAGAAAAAAAZAAIAAAABAAAAAAAZAAEAAAACAAAAAAAZAAAAAAAGAAAAAAAYABIAAAAAAAAAAAAYABEAAAAAAAAAAAAYABAAAAAGAAAAAAAYAA8AAAACAAAAAAAYAA4AAAAFAAAAAAAYAA0AAAABAAAAAAAYAAwAAAABAAAAAAAYAAsAAAAAAAAAAAAYAAoAAAABAAAAAAAYAAkAAAACAAAAAAAYAAgAAAAFAAAAAAAYAAcAAAACAAAAAAAYAAYAAAAFAAAAAAAYAAUAAAABAAAAAAAYAAQAAAABAAAAAAAYAAMAAAABAAAAAAAYAAIAAAAFAAAAAAAYAAEAAAAFAAAAAAAYAAAAAAAGAAAAAAAXABIAAAAFAAAAAAAXABEAAAAFAAAAAAAXABAAAAAGAAAAAAAXAA8AAAAAAAAAAAAXAA4AAAAFAAAAAAAXAA0AAAAFAAAAAAAXAAwAAAAGAAAAAAAXAAsAAAABAAAAAAAXAAoAAAAAAAAAAAAXAAkAAAAFAAAAAAAXAAgAAAAFAAAAAAAXAAcAAAAFAAAAAAAXAAYAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAMAAAACAAAAAAAXAAIAAAACAAAAAAAXAAEAAAAGAAAAAAAXAAAAAAAAAAAAAAAWABIAAAACAAAAAAAWABEAAAABAAAAAAAWABAAAAABAAAAAAAWAA8AAAACAAAAAAAWAA4AAAABAAAAAAAWAA0AAAAAAAAAAAAWAAwAAAACAAAAAAAWAAsAAAAAAAAAAAAWAAoAAAAFAAAAAAAWAAkAAAAFAAAAAAAWAAgAAAACAAAAAAAWAAcAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAQAAAACAAAAAAAWAAMAAAACAAAAAAAWAAIAAAAAAAAAAAAWAAEAAAABAAAAAAAWAAAAAAAGAAAAAAAVABIAAAAFAAAAAAAVABEAAAACAAAAAAAVABAAAAAGAAAAAAAVAA8AAAAFAAAAAAAVAA4AAAAAAAAAAAAVAA0AAAAAAAAAAAAVAAwAAAAFAAAAAAAVAAsAAAAAAAAAAAAVAAoAAAABAAAAAAAVAAkAAAACAAAAAAAVAAgAAAAFAAAAAAAVAAcAAAAGAAAAAAAVAAYAAAABAAAAAAAVAAUAAAAFAAAAAAAVAAQAAAAFAAAAAAAVAAMAAAABAAAAAAAVAAIAAAADAAAAAAAVAAEAAAACAAAAAAAVAAAAAAAGAAAAAAAUABIAAAAAAAAAAAAUABEAAAAGAAAAAAAUABAAAAAAAAAAAAAUAA8AAAABAAAAAAAUAA4AAAAFAAAAAAAUAA0AAAAAAAAAAAAUAAwAAAAGAAAAAAAUAAsAAAACAAAAAAAUAAoAAAABAAAAAAAUAAkAAAABAAAAAAAUAAgAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAUAAAACAAAAAAAUAAQAAAAAAAAAAAAUAAMAAAABAAAAAAAUAAIAAAABAAAAAAAUAAEAAAAAAAAAAAAUAAAAAAABAAAAAAATABIAAAAFAAAAAAATABEAAAAGAAAAAAATABAAAAAFAAAAAAATAA8AAAAGAAAAAAATAA4AAAAGAAAAAAATAA0AAAAAAAAAAAATAAwAAAAAAAAAAAATAAsAAAAFAAAAAAATAAoAAAACAAAAAAATAAkAAAABAAAAAAATAAgAAAABAAAAAAATAAcAAAAFAAAAAAATAAYAAAAAAAAAAAATAAUAAAACAAAAAAATAAQAAAABAAAAAAATAAMAAAABAAAAAAATAAIAAAAAAAAAAAATAAEAAAABAAAAAAATAAAAAAABAAAAAAASABIAAAABAAAAAAASABEAAAAFAAAAAAASABAAAAAFAAAAAAASAA8AAAACAAAAAAASAA4AAAAGAAAAAAASAA0AAAACAAAAAAASAAwAAAABAAAAAAASAAsAAAABAAAAAAASAAoAAAABAAAAAAASAAkAAAAFAAAAAAASAAgAAAAGAAAAAAASAAcAAAAAAAAAAAASAAYAAAAGAAAAAAASAAUAAAAGAAAAAAASAAQAAAAFAAAAAAASAAMAAAAGAAAAAAASAAIAAAAAAAAAAAASAAEAAAAFAAAAAAASAAAAAAAAAAAAAAARABIAAAAAAAAAAAARABEAAAAFAAAAAAARABAAAAAAAAAAAAARAA8AAAABAAAAAAARAA4AAAAGAAAAAAARAA0AAAABAAAAAAARAAwAAAAGAAAAAAARAAsAAAAFAAAAAAARAAoAAAAGAAAAAAARAAkAAAAAAAAAAAARAAgAAAAFAAAAAAARAAcAAAACAAAAAAARAAYAAAAFAAAAAAARAAUAAAAGAAAAAAARAAQAAAAGAAAAAAARAAMAAAAFAAAAAAARAAIAAAAGAAAAAAARAAEAAAABAAAAAAARAAAAAAACAAAAAAAQABIAAAAFAAAAAAAQABEAAAAAAAAAAAAQABAAAAAAAAAAAAAQAA8AAAAFAAAAAAAQAA4AAAAGAAAAAAAQAA0AAAAGAAAAAAAQAAwAAAAGAAAAAAAQAAsAAAABAAAAAAAQAAoAAAAFAAAAAAAQAAkAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAcAAAAFAAAAAAAQAAYAAAAAAAAAAAAQAAUAAAAGAAAAAAAQAAQAAAACAAAAAAAQAAMAAAAEAAAAAAAQAAIAAAAGAAAAAAAQAAEAAAAAAAAAAAAQAAAAAAAAAAAAAAAPABIAAAAFAAAAAAAPABEAAAAAAAAAAAAPABAAAAACAAAAAAAPAA8AAAACAAAAAAAPAA4AAAAGAAAAAAAPAA0AAAAAAAAAAAAPAAwAAAAAAAAAAAAPAAsAAAACAAAAAAAPAAoAAAAAAAAAAAAPAAkAAAAGAAAAAAAPAAgAAAABAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAGAAAAAAAPAAUAAAAGAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAACAAAAAAAPAAIAAAACAAAAAAAPAAEAAAAGAAAAAAAPAAAAAAAAAAAAAAAOABIAAAAFAAAAAAAOABEAAAAGAAAAAAAOABAAAAAAAAAAAAAOAA8AAAAAAAAAAAAOAA4AAAACAAAAAAAOAA0AAAABAAAAAAAOAAwAAAAFAAAAAAAOAAsAAAACAAAAAAAOAAoAAAABAAAAAAAOAAkAAAAAAAAAAAAOAAgAAAAFAAAAAAAOAAcAAAAFAAAAAAAOAAYAAAAGAAAAAAAOAAUAAAAAAAAAAAAOAAQAAAABAAAAAAAOAAMAAAACAAAAAAAOAAIAAAAGAAAAAAAOAAEAAAAGAAAAAAAOAAAAAAAAAAAAAAANABIAAAAGAAAAAAANABEAAAAFAAAAAAANABAAAAACAAAAAAANAA8AAAAAAAAAAAANAA4AAAAGAAAAAAANAA0AAAABAAAAAAANAAwAAAABAAAAAAANAAsAAAAFAAAAAAANAAoAAAAAAAAAAAANAAkAAAAAAAAAAAANAAgAAAACAAAAAAANAAcAAAAGAAAAAAANAAYAAAABAAAAAAANAAUAAAACAAAAAAANAAQAAAAAAAAAAAANAAMAAAAAAAAAAAANAAIAAAAAAAAAAAANAAEAAAAFAAAAAAANAAAAAAABAAAAAAAMABIAAAAGAAAAAAAMABEAAAAGAAAAAAAMABAAAAABAAAAAAAMAA8AAAABAAAAAAAMAA4AAAAFAAAAAAAMAA0AAAABAAAAAAAMAAwAAAAAAAAAAAAMAAsAAAAFAAAAAAAMAAoAAAAFAAAAAAAMAAkAAAAFAAAAAAAMAAgAAAABAAAAAAAMAAcAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAQAAAAGAAAAAAAMAAMAAAAGAAAAAAAMAAIAAAACAAAAAAAMAAEAAAAGAAAAAAAMAAAAAAAAAAAAAAALABIAAAACAAAAAAALABEAAAACAAAAAAALABAAAAAAAAAAAAALAA8AAAAFAAAAAAALAA4AAAAGAAAAAAALAA0AAAAFAAAAAAALAAwAAAACAAAAAAALAAsAAAACAAAAAAALAAoAAAACAAAAAAALAAkAAAAFAAAAAAALAAgAAAAAAAAAAAALAAcAAAACAAAAAAALAAYAAAAFAAAAAAALAAUAAAACAAAAAAALAAQAAAAGAAAAAAALAAMAAAACAAAAAAALAAIAAAABAAAAAAALAAEAAAAAAAAAAAALAAAAAAAAAAAAAAAKABIAAAABAAAAAAAKABEAAAABAAAAAAAKABAAAAAFAAAAAAAKAA8AAAABAAAAAAAKAA4AAAAGAAAAAAAKAA0AAAAFAAAAAAAKAAwAAAAGAAAAAAAKAAsAAAABAAAAAAAKAAoAAAABAAAAAAAKAAkAAAAGAAAAAAAKAAgAAAAGAAAAAAAKAAcAAAABAAAAAAAKAAYAAAAGAAAAAAAKAAUAAAAGAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAIAAAAFAAAAAAAKAAEAAAAGAAAAAAAKAAAAAAAAAAAAAAAJABIAAAAGAAAAAAAJABEAAAAGAAAAAAAJABAAAAAFAAAAAAAJAA8AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA0AAAACAAAAAAAJAAwAAAAGAAAAAAAJAAsAAAAAAAAAAAAJAAoAAAABAAAAAAAJAAkAAAAFAAAAAAAJAAgAAAACAAAAAAAJAAcAAAAAAAAAAAAJAAYAAAAFAAAAAAAJAAUAAAAFAAAAAAAJAAQAAAACAAAAAAAJAAMAAAAGAAAAAAAJAAIAAAACAAAAAAAJAAEAAAAGAAAAAAAJAAAAAAAAAAAAAAAIABIAAAAGAAAAAAAIABEAAAABAAAAAAAIABAAAAAGAAAAAAAIAA8AAAACAAAAAAAIAA4AAAAAAAAAAAAIAA0AAAAAAAAAAAAIAAwAAAAAAAAAAAAIAAsAAAACAAAAAAAIAAoAAAABAAAAAAAIAAkAAAAGAAAAAAAIAAgAAAAGAAAAAAAIAAcAAAAAAAAAAAAIAAYAAAABAAAAAAAIAAUAAAAFAAAAAAAIAAQAAAAAAAAAAAAIAAMAAAACAAAAAAAIAAIAAAAFAAAAAAAIAAEAAAAFAAAAAAAIAAAAAAABAAAAAAAHABIAAAAGAAAAAAAHABEAAAAAAAAAAAAHABAAAAAGAAAAAAAHAA8AAAABAAAAAAAHAA4AAAACAAAAAAAHAA0AAAABAAAAAAAHAAwAAAABAAAAAAAHAAsAAAACAAAAAAAHAAoAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAgAAAAFAAAAAAAHAAcAAAACAAAAAAAHAAYAAAAAAAAAAAAHAAUAAAACAAAAAAAHAAQAAAAAAAAAAAAHAAMAAAACAAAAAAAHAAIAAAAFAAAAAAAHAAEAAAAAAAAAAAAHAAAAAAAFAAAAAAAGABIAAAAFAAAAAAAGABEAAAAGAAAAAAAGABAAAAACAAAAAAAGAA8AAAAAAAAAAAAGAA4AAAACAAAAAAAGAA0AAAAAAAAAAAAGAAwAAAAAAAAAAAAGAAsAAAABAAAAAAAGAAoAAAAAAAAAAAAGAAkAAAAFAAAAAAAGAAgAAAAAAAAAAAAGAAcAAAAFAAAAAAAGAAYAAAAAAAAAAAAGAAUAAAAFAAAAAAAGAAQAAAAFAAAAAAAGAAMAAAAFAAAAAAAGAAIAAAACAAAAAAAGAAEAAAACAAAAAAAGAAAAAAABAAAAAAAFABIAAAAGAAAAAAAFABEAAAAAAAAAAAAFABAAAAAFAAAAAAAFAA8AAAABAAAAAAAFAA4AAAAGAAAAAAAFAA0AAAAGAAAAAAAFAAwAAAAAAAAAAAAFAAsAAAACAAAAAAAFAAoAAAABAAAAAAAFAAkAAAAEAAAAAAAFAAgAAAACAAAAAAAFAAcAAAACAAAAAAAFAAYAAAAFAAAAAAAFAAUAAAACAAAAAAAFAAQAAAABAAAAAAAFAAMAAAAFAAAAAAAFAAIAAAACAAAAAAAFAAEAAAAGAAAAAAAFAAAAAAAGAAAAAAAEABIAAAACAAAAAAAEABEAAAACAAAAAAAEABAAAAAAAAAAAAAEAA8AAAAAAAAAAAAEAA4AAAAAAAAAAAAEAA0AAAAGAAAAAAAEAAwAAAAGAAAAAAAEAAsAAAABAAAAAAAEAAoAAAAGAAAAAAAEAAkAAAAFAAAAAAAEAAgAAAAFAAAAAAAEAAcAAAAGAAAAAAAEAAYAAAAGAAAAAAAEAAUAAAAGAAAAAAAEAAQAAAAAAAAAAAAEAAMAAAABAAAAAAAEAAIAAAACAAAAAAAEAAEAAAACAAAAAAAEAAAAAAAGAAAAAAADABIAAAAAAAAAAAADABEAAAAFAAAAAAADABAAAAABAAAAAAADAA8AAAABAAAAAAADAA4AAAABAAAAAAADAA0AAAACAAAAAAADAAwAAAACAAAAAAADAAsAAAAGAAAAAAADAAoAAAAFAAAAAAADAAkAAAAAAAAAAAADAAgAAAABAAAAAAADAAcAAAABAAAAAAADAAYAAAABAAAAAAADAAUAAAABAAAAAAADAAQAAAAGAAAAAAADAAMAAAAGAAAAAAADAAIAAAAAAAAAAAADAAEAAAACAAAAAAADAAAAAAAGAAAAAAACABIAAAAGAAAAAAACABEAAAABAAAAAAACABAAAAAGAAAAAAACAA8AAAAGAAAAAAACAA4AAAACAAAAAAACAA0AAAABAAAAAAACAAwAAAAGAAAAAAACAAsAAAAGAAAAAAACAAoAAAACAAAAAAACAAkAAAAAAAAAAAACAAgAAAAGAAAAAAACAAcAAAAAAAAAAAACAAYAAAABAAAAAAACAAUAAAAGAAAAAAACAAQAAAAGAAAAAAACAAMAAAACAAAAAAACAAIAAAACAAAAAAACAAEAAAACAAAAAAACAAAAAAACAAAAAAABABIAAAACAAAAAAABABEAAAAGAAAAAAABABAAAAAGAAAAAAABAA8AAAABAAAAAAABAA4AAAABAAAAAAABAA0AAAAAAAAAAAABAAwAAAAFAAAAAAABAAsAAAAFAAAAAAABAAoAAAAFAAAAAAABAAkAAAAFAAAAAAABAAgAAAAFAAAAAAABAAcAAAAAAAAAAAABAAYAAAACAAAAAAABAAUAAAAAAAAAAAABAAQAAAACAAAAAAABAAMAAAAAAAAAAAABAAIAAAABAAAAAAABAAEAAAAAAAAAAAABAAAAAAACAAAAAAAAABIAAAAGAAAAAAAAABEAAAAAAAAAAAAAABAAAAAFAAAAAAAAAA8AAAAGAAAAAAAAAA4AAAAAAAAAAAAAAA0AAAAGAAAAAAAAAAwAAAAAAAAAAAAAAAsAAAAFAAAAAAAAAAoAAAAGAAAAAAAAAAkAAAABAAAAAAAAAAgAAAAAAAAAAAAAAAcAAAAGAAAAAAAAAAYAAAACAAAAAAAAAAUAAAABAAAAAAAAAAQAAAABAAAAAAAAAAMAAAAGAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAFAAAAAAAAAAAAAAAAAAAAAAAfABMAAAAFAAAAAAAfABIAAAAGAAAAAAAfABEAAAAFAAAAAAAfABAAAAABAAAAAAAfAA8AAAAGAAAAAAAfAA4AAAAGAAAAAAAfAA0AAAABAAAAAAAfAAwAAAAFAAAAAAAfAAsAAAAFAAAAAAAfAAoAAAACAAAAAAAfAAkAAAABAAAAAAAfAAgAAAAFAAAAAAAfAAcAAAACAAAAAAAfAAYAAAABAAAAAAAfAAUAAAACAAAAAAAfAAQAAAAGAAAAAAAfAAMAAAAFAAAAAAAfAAIAAAAFAAAAAAAfAAEAAAAFAAAAAAAfAAAAAAAAAAAAAAAfAP//AAAGAAAAAAAfAP7/AAABAAAAAAAeABMAAAAAAAAAAAAeAP//AAAFAAAAAAAeAP7/AAACAAAAAAAdABMAAAAFAAAAAAAdAP//AAACAAAAAAAdAP7/AAAAAAAAAAAcABMAAAAAAAAAAAAcAP//AAACAAAAAAAcAP7/AAAAAAAAAAAbABMAAAAFAAAAAAAbAP//AAAGAAAAAAAbAP7/AAAFAAAAAAAaABMAAAAFAAAAAAAaAP//AAAAAAAAAAAaAP7/AAABAAAAAAAZABMAAAAAAAAAAAAZAP//AAACAAAAAAAZAP7/AAAFAAAAAAAYABMAAAAFAAAAAAAYAP//AAAFAAAAAAAYAP7/AAAAAAAAAAAXABMAAAAGAAAAAAAXAP//AAAFAAAAAAAXAP7/AAABAAAAAAAWABMAAAAAAAAAAAAWAP//AAACAAAAAAAWAP7/AAAAAAAAAAAVABMAAAAFAAAAAAAVAP//AAACAAAAAAAVAP7/AAAGAAAAAAAUABMAAAAFAAAAAAAUAP//AAAGAAAAAAAUAP7/AAAFAAAAAAATABMAAAABAAAAAAATAP//AAAFAAAAAAATAP7/AAAGAAAAAAASABMAAAAFAAAAAAASAP//AAAAAAAAAAASAP7/AAAFAAAAAAARABMAAAADAAAAAAARAP//AAABAAAAAAARAP7/AAAFAAAAAAAQABMAAAACAAAAAAAQAP//AAAAAAAAAAAQAP7/AAACAAAAAAAPABMAAAAGAAAAAAAPAP//AAAGAAAAAAAPAP7/AAAGAAAAAAAOABMAAAAAAAAAAAAOAP//AAAFAAAAAAAOAP7/AAAAAAAAAAANABMAAAAFAAAAAAANAP//AAAAAAAAAAANAP7/AAAAAAAAAAAMABMAAAAGAAAAAAAMAP//AAAAAAAAAAAMAP7/AAAAAAAAAAALABMAAAAAAAAAAAALAP//AAABAAAAAAALAP7/AAAFAAAAAAAKABMAAAAAAAAAAAAKAP//AAABAAAAAAAKAP7/AAACAAAAAAAJABMAAAAFAAAAAAAJAP//AAACAAAAAAAJAP7/AAAGAAAAAAAIABMAAAAAAAAAAAAIAP//AAACAAAAAAAIAP7/AAAAAAAAAAAHABMAAAAGAAAAAAAHAP//AAAFAAAAAAAHAP7/AAACAAAAAAAGABMAAAAFAAAAAAAGAP//AAAGAAAAAAAGAP7/AAAGAAAAAAAFABMAAAAGAAAAAAAFAP//AAAFAAAAAAAFAP7/AAAGAAAAAAAEABMAAAACAAAAAAAEAP//AAAFAAAAAAAEAP7/AAAFAAAAAAADABMAAAABAAAAAAADAP//AAAFAAAAAAADAP7/AAAGAAAAAAACABMAAAAGAAAAAAACAP//AAAGAAAAAAACAP7/AAAGAAAAAAABABMAAAABAAAAAAABAP//AAACAAAAAAABAP7/AAAFAAAAAAAAABMAAAACAAAAAAAAAP//AAAFAAAAAAAAAP7/AAAAAAAAAAD//xMAAAAAAAAAAAD//xIAAAACAAAAAAD//xEAAAABAAAAAAD//xAAAAAAAAAAAAD//w8AAAAAAAAAAAD//w4AAAACAAAAAAD//w0AAAABAAAAAAD//wwAAAAFAAAAAAD//wsAAAACAAAAAAD//woAAAACAAAAAAD//wkAAAABAAAAAAD//wgAAAAGAAAAAAD//wcAAAAAAAAAAAD//wYAAAACAAAAAAD//wUAAAABAAAAAAD//wQAAAAGAAAAAAD//wMAAAACAAAAAAD//wIAAAAAAAAAAAD//wEAAAACAAAAAAD//wAAAAACAAAAAAD/////AAAFAAAAAAD///7/AAACAAAAAAA=")
tile_set = SubResource("TileSet_7nt27")
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false
script = ExtResource("3_4bgka")
player = NodePath("../Player")

[node name="Present" parent="." node_paths=PackedStringArray("player") instance=ExtResource("13_4w45t")]
position = Vector2(481, 424)
player = NodePath("../Player")
min_teleport_range = 1200.0
max_teleport_range = 2000.0
min_teleport_delay = 5.0
max_teleport_delay = 20.0
value_step = 5.0
step_duration = 0.1

[node name="Spawners" type="Node" parent="."]

[node name="CoalCoboldSpawner" parent="Spawners" instance=ExtResource("3_18nlu")]
position = Vector2(233, 247)
enemy_type = ExtResource("3_c16ls")
spawn_timer_min = 5.0
spawn_timer_max = 15.0

[node name="SnowmanSpawner" parent="Spawners" instance=ExtResource("3_18nlu")]
enemy_type = ExtResource("5_rt2n2")
min_enemies = 2
max_enemies = 10
spawn_timer_min = 1.5
spawn_timer_max = 8.5

[node name="MatchSpawner" parent="Spawners" instance=ExtResource("3_18nlu")]
enemy_type = ExtResource("5_18nlu")

[node name="EvilTreeSpawner" parent="Spawners" instance=ExtResource("3_18nlu")]
enemy_type = ExtResource("8_bcnxi")

[node name="SnowflakeSpawner" parent="Spawners" instance=ExtResource("3_18nlu")]
enemy_type = ExtResource("9_k6f3i")

[node name="Player" parent="." instance=ExtResource("2_pw63i")]
position = Vector2(964, 603)

[node name="MainCamera" type="Camera2D" parent="Player"]

[node name="PuCandyCane" parent="Player" instance=ExtResource("7_mngbo")]
frequency = 0.02

[node name="PuNutCracker" parent="Player" instance=ExtResource("8_4w45t")]

[node name="PuStar" parent="Player" instance=ExtResource("9_r6p65")]

[node name="PuTinSoldier" parent="Player" instance=ExtResource("10_si52b")]

[node name="PuHorse" parent="Player" instance=ExtResource("14_7nt27")]

[node name="PuCookie" parent="Player" instance=ExtResource("12_01n6w")]

[node name="AudioLoopPlayer" parent="Player" instance=ExtResource("17_u0fll")]
process_mode = 3
audio_files = Array[AudioStream]([ExtResource("18_6p3nn"), ExtResource("19_k67gn"), ExtResource("20_k3g67")])

[node name="SnowLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="SnowLayer"]
material = SubResource("ShaderMaterial_k67gn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PowerupSelection" parent="UILayer/MarginContainer" node_paths=PackedStringArray("powerups") instance=ExtResource("8_18nlu")]
unique_name_in_owner = true
visible = false
layout_mode = 2
powerups = [NodePath("../../../Player/PuCandyCane"), NodePath("../../../Player/PuNutCracker"), NodePath("../../../Player/PuStar"), NodePath("../../../Player/PuTinSoldier"), NodePath("../../../Player/PuHorse"), NodePath("../../../Player/PuCookie")]

[node name="JoyLevelLabel" type="Label" parent="UILayer/MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Joy Level 1"
label_settings = SubResource("LabelSettings_18nlu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UILayer/MarginContainer/JoyLevelLabel"]
libraries = {
&"": SubResource("AnimationLibrary_e1cbu")
}

[node name="PresentArrow" type="Sprite2D" parent="UILayer/MarginContainer" node_paths=PackedStringArray("player", "present")]
position = Vector2(857, 457)
texture = ExtResource("14_si52b")
script = ExtResource("15_01n6w")
player = NodePath("../../../Player")
present = NodePath("../../../Present")

[node name="XPLabel" type="Label" parent="UILayer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_adb74")
theme_override_styles/focus = SubResource("StyleBoxEmpty_58gk3")
text = "XP: 0/30"
label_settings = SubResource("LabelSettings_to7gp")
horizontal_alignment = 2

[node name="PowerupTray" parent="UILayer/MarginContainer" instance=ExtResource("27_k67gn")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("28_k3g67")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="JoyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="collected" from="Present" to="." method="_on_present_collected"]
[connection signal="collected" from="Present" to="UILayer/MarginContainer/PresentArrow" method="_on_present_collected"]
[connection signal="teleported" from="Present" to="UILayer/MarginContainer/PresentArrow" method="_on_present_teleported"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="level_up" from="Player" to="." method="_on_player_level_up"]
[connection signal="xp_collected" from="Player" to="." method="_on_player_xp_collected"]
[connection signal="powerup_selected" from="UILayer/MarginContainer/PowerupSelection" to="." method="_on_powerup_selection_powerup_selected"]
[connection signal="timeout" from="JoyTimer" to="." method="_on_timer_timeout"]
